# mini-search-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: CONTEXT.md  REPORT.md
docs/agents/: domain.md  install-and-run.md  triage-labels.md
docs/project-rules/: coding-rules.md  commit-rules.md
docs/quick-start/: quick-start.md
examples/: questions.md
prototypes/mini_search_agent_cli/: __init__.py  config.py  llm.py  projection.py  prompts.py  runner.py  session.py  sources.py
prototypes/mini_search_agent_cli/prompts/: main_agent.md
prototypes/mini_search_agent_cli/tools/: __init__.py  web_search.py
runs/2026-05-26-2025-2026-deep-research/session-2026-05-26-001/: main.jsonl  session.json  telemetry.jsonl
src/eval/: __init__.py  __main__.py  checks.py  data.py  judge.py  judge_prompts.py
src/mini_search_agent/: ablation.py  agent_loop.py  citations.py  cli.py  console.py  llm.py  projection.py  runner.py  session.py  sources.py  subagent.py  tool_filter.py  tool_schema.py
src/mini_search_agent/prompts/: main_agent.md  search_subagent.md
src/mini_search_agent/tools/: base.py  (+5 more)
tests/: test_agent_loop.py  test_cli_baseline.py  test_console.py  test_docs.py  test_eval.py  test_final_answer.py  test_issue_02_cli_baseline.py  test_issue_03_timeline_telemetry.py  test_issue_04_web_search.py  test_issue_05_web_fetch.py  test_issue_06_source_notes.py  test_llm_streaming.py  test_prompt_guidance.py  test_query_plan_collection.py  test_source_notes.py  test_subagent.py  test_timeline_telemetry.py  test_tool_schema.py  test_web_fetch.py  test_web_search.py
(+94 files in other folders)
