[project]
name = "mini-search-agent"
version = "0.1.0"
description = "A uv-managed Python CLI for a mini search agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "httpx>=0.28,<1",
    "openai>=1,<2",
    "python-dotenv>=1,<2",
    "trafilatura>=1.9,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mini-search-agent = "mini_search_agent.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/mini_search_agent"]
